--- a/books/templates/books/index.template.html
+++ b/books/templates/books/index.template.html
@@ -1,22 +1,14 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <title>Document</title>
-  </head>
-  <body>
+
+{% extends 'base.template.html' %}
+
+{% block content %}
     <h1>Books</h1>
     <ul>
       {% for each_book in all_books %}
       <li>{{each_book.title}} 
             <a href="{% url 'update_book_route' book_id=each_book.id %}">Edit</a> 
-            <a href="{% url 'delete_book_route' book_id=each_book.id %}">Delete</a>
-      
+            <a href="{% url 'delete_book_route' book_id=each_book.id %}">Delete</a>      
       </li>
       {% endfor %}
     </ul>
-  </body>
-</html>
+{% endblock %}
