--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,13 +1,13 @@
-{% extends "account/base.html" %}
+{% extends "base.template.html" %}
 
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block title %}Sign In{% endblock %}
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<h1>Log into your account</h1>
 
 {% get_providers as socialaccount_providers %}
 
