--- a/books/templates/books/welcome.template.html
+++ b/books/templates/books/welcome.template.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.template.html' %}
+
+{% block title%}Welcome{%endblock%}
+
+{%block content%}
     <h1>Welcome!</h1>
     {% if request.user.is_authenticated %}
          <p>Welcome back, {{request.user}}</p>
     {% else %}
         <p>Please <a href="/accounts/login">login</a></p>
     {% endif %}
-
-</body>
-</html>
+{%endblock%}
