--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -13,6 +13,14 @@
   </head>
   <body>
     <div class="container">
+
+        {% if messages %}
+        <div class='alert alert-success'>
+            {% for message in messages %}
+                <p>{{message}}</p>
+            {% endfor %}
+        </div>
+        {%endif%}
         {%block content%}{%endblock%}
     </div>
 
