Added cloudinary upload

--- a/books/templates/books/index.template.html
+++ b/books/templates/books/index.template.html
@@ -1,6 +1,7 @@
 
 {% extends 'base.template.html' %}
 {% load crispy_forms_tags %}
+{% load cloudinary %}
 
 
 {% block content %}
@@ -16,6 +17,7 @@
     <ul>
       {% for each_book in all_books %}
       <li>
+      {% cloudinary each_book.cover %}
       <a href="{% url 'book_details_route' book_id=each_book.id %}">{{each_book.title}}</a> 
             <a href="{% url 'update_book_route' book_id=each_book.id %}">Edit</a> 
             <a href="{% url 'delete_book_route' book_id=each_book.id %}">Delete</a>      
