Added checkout with stripe and webhook

--- a/cart/templates/cart/view.template.html
+++ b/cart/templates/cart/view.template.html
@@ -5,13 +5,17 @@
 <ul>
 {% for key, item in cart.items %}
 <li> 
-    {% cloudinary item.image class="book_cover" %}
-    {{item.title}} (${{item.cost}}) x {{item.qty}}
-    <a href="{% url 'remove_from_cart_route' book_id=item.id %}" class="btn btn-danger btn-sm">Remove</a>
+    <form method="POST" action="{% url 'update_cart_quantity' book_id=item.id %}">
+        {% csrf_token %}
+        {% cloudinary item.image class="book_cover" %}
+        {{item.title}} (${{item.cost}}) x <input type="text" name="qty" value="{{item.qty}}" style="width:30px"/> 
+        <input type="submit" class="btn btn-success btn-sm" value="Update Quantity"/>
+        <a href="{% url 'remove_from_cart_route' book_id=item.id %}" class="btn btn-danger btn-sm">Remove</a>
+    </form>
 </li>
 {% endfor %}
 </ul>
 
 <h1>Total: ${{total}}</h1>
-
+<a href="{% url 'checkout_route' %}" class="btn btn-primary">Checkout</a>
 {% endblock %}
