--- a/templates/base.template.html
+++ b/templates/base.template.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <div class="container">
+        <div class="header">
+            <a href="{% url 'show_cart_route' %}">Shopping Cart ({{number_of_items}})</a>
+        </div>
 
         {% if messages %}
         <div class='alert alert-success'>
@@ -21,7 +24,21 @@
             {% endfor %}
         </div>
         {%endif%}
-        {%block content%}{%endblock%}
+        <div class="row">
+            <div class="col-10">
+                {%block content%}{%endblock%}
+            </div>
+            <div class="col-2">
+                <h3>Shopping Cart</h3>
+                <ul class="list-group">
+                    {% for key, item in shopping_cart.items %}
+                    <li class="list-group-item">{{item.title}}</li>
+                    {% endfor %}
+
+                </ul>
+            </div>
+        </div>
+
     </div>
 
     <!-- Optional JavaScript -->
